# Anvil

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml
apps/sandbox/: CMakeLists.txt  main.cpp
cmake/: AnvilCompilerWarnings.cmake  AnvilPackaging.cmake  AnvilSanitizers.cmake  AnvilStaticAnalysis.cmake  VerifyInstall.cmake
docs/: roadmap.md
docs/architecture/: README.md
docs/decisions/: 0001-language-and-build-system.md  0002-platform-layer.md  0003-dependency-policy.md  0004-fixed-timestep.md  0005-rendering-api.md  0006-asset-identity.md  0007-physical-rendering-data.md  0008-editor-command-history.md  0009-gameplay-system-graph.md  0010-runtime-packaging.md
engine/assets/: CMakeLists.txt
engine/assets/include/anvil/assets/: asset_id.hpp  asset_registry.hpp
engine/assets/src/: asset_id.cpp  asset_registry.cpp
engine/core/: CMakeLists.txt
engine/core/include/anvil/core/: assert.hpp  log.hpp  time.hpp  version.hpp.in
engine/core/src/: assert.cpp  log.cpp  time.cpp
engine/gameplay/: CMakeLists.txt
engine/gameplay/include/anvil/gameplay/: system_graph.hpp
engine/gameplay/src/: system_graph.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/anvil/platform/: application.hpp  debug_canvas.hpp
engine/platform/src/: application.cpp
engine/render/: CMakeLists.txt
engine/render/include/anvil/render/: render_instance.hpp  scene_types.hpp
engine/render/src/: render_instance.cpp  scene_types.cpp
tests/: CMakeLists.txt
tests/assets/: assets_tests.cpp
tests/editor/: command_history_tests.cpp
tests/gameplay/: system_graph_tests.cpp
tests/render/: render_data_tests.cpp  render_tests.cpp
tests/unit/: core_tests.cpp
tools/editor/: CMakeLists.txt
tools/editor/include/anvil/editor/: command_history.hpp
tools/editor/src/: command_history.cpp
